# SchoolSports-Cpp

./: .gitignore  CMakeLists.txt  INTRODUCE.md  README.md  main.cpp
include/: Athlete.h  BackupData.h  CompetitionEvent.h  Constants.h  DataManager.h  Event.h  Gender.h  Registration.h  Result.h  Schedule.h  ScoreRule.h  ScoringRule.h  SportsMeet.h  SystemSettings.h  TimeUtils.h  Unit.h  utils.h
include/Components/: Athlete.h  AthleteManager.h  AutoTest.h  CompetitionEvent.h  CompetitionEventManager.h  Constants.h  DataFileManager.h  DataManager.h  Registration.h  Result.h  Schedule.h  ScoreRule.h  ScoreRuleManager.h  SystemSettings.h  Unit.h  UnitManager.h  Workflow.h
include/Components/Core/: Athlete.h  AutoTest.h  CompetitionEvent.h  Constants.h  DataContainer.h  Registration.h  RegistrationTransaction.h  Result.h  Schedule.h  ScoreRule.h  SystemSettings.h  Unit.h
include/Components/Manager/: AthleteManager.h  CompetitionEventManager.h  DataFileManager.h  DataManager.h  EventResultsManager.h  ScheduleLockManager.h  ScheduleManager.h  ScoreRuleManager.h  SessionManager.h  SystemArgsManager.h  UnitManager.h  VenueManager.h  WorkflowManager.h
include/Controller/: DataManagementController.h  QueryController.h  RegistrationController.h  ResultsController.h  ScheduleController.h  SystemSettingsController.h
include/UI/: UIManager.h
include/UI/Controller/: DataManagementController.h  QueryController.h  RegistrationController.h  ResultsController.h  ScheduleController.h  SystemSettingsController.h
src/: Athlete.cpp  AutoTest.cpp  CompetitionEvent.cpp  DataManager.cpp  Event.cpp  Registration.cpp  Result.cpp  Schedule.cpp  ScoreRule.cpp  SportsMeet.cpp  SystemSettings.cpp  Unit.cpp  main.cpp
src/Components/: Athlete.cpp  AthleteManager.cpp  AutoTest.cpp  CompetitionEvent.cpp  CompetitionEventManager.cpp  DataFileManager.cpp  DataManager.cpp  Registration.cpp  Result.cpp  Schedule.cpp  ScoreRule.cpp  ScoreRuleManager.cpp  SystemSettings.cpp  Unit.cpp  UnitManager.cpp
src/Components/Core/: Athlete.cpp  CompetitionEvent.cpp  DataContainer.cpp  Registration.cpp  RegistrationTransaction.cpp  Result.cpp  Schedule.cpp  ScoreRule.cpp  SystemSettings.cpp  Unit.cpp
src/Components/Manager/: AthleteManager.cpp  CompetitionEventManager.cpp  DataFileManager.cpp  DataManager.cpp  EventResultsManager.cpp  ScheduleLockManager.cpp  ScheduleManager.cpp  ScoreRuleManager.cpp  SessionManager.cpp  SystemArgsManager.cpp  UnitManager.cpp  VenueManager.cpp  WorkflowManager.cpp
src/Controller/: DataManagementController.cpp  QueryController.cpp  RegistrationController.cpp  ResultsController.cpp  ScheduleController.cpp  SystemSettingsController.cpp
src/UI/: UIManager.cpp
src/UI/Controller/: DataManagementController.cpp  QueryController.cpp  RegistrationController.cpp  ResultsController.cpp  ScheduleController.cpp  SystemSettingsController.cpp
